webpack init&config *add server for deploy app build *update README *turning off the redux-logger in production mode *actor_null image format changed from .png to .jpg

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="public/favicon.ico" />
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1" />
     <meta
       name="description"
       content="Movie app"
     />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="public/manifest.json" />
     <title>Movie App</title>
   </head>
   <body>
